--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar mode="indeterminate" color="primary" style="position: fixed; width: 100%; z-index: 999999999;"></mat-progress-bar>
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
@@ -6,11 +7,11 @@
     [attr.role]="isHandset ? 'dialog' : 'navigation'"
     [mode]="(isHandset | async)!.matches ? 'over' : 'side'"
     [opened]="!(isHandset | async)!.matches">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+    <mat-toolbar color="primary">Global FMT</mat-toolbar>
+    <mat-nav-list color="primary">
+      <mat-list-item *ngFor="let menu of menuItems">
+      <a routerLink={{menu.url}}>{{menu.value}}</a>
+      </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -23,8 +24,8 @@
         *ngIf="(isHandset | async)!.matches">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Application Title</span>
+      <span>{{title}}</span>
     </mat-toolbar>
-    <div>Rajesh</div>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
